<resources>
    <string name="app_name">删除最近图片</string>
    <string name="author" translatable="false">来一斤BUG</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="refresh">刷新</string>
    <string name="settings">设置</string>
    <string name="ok">好的</string>
    <string name="disagree_and_exit">不同意且退出</string>
    <string name="agree">同意</string>
    <string name="close">关闭</string>
    <string name="copy">复制</string>
    <string name="determine">确定</string>
    <string name="prompt">提示</string>
    <string name="copied">已复制</string>

    <!-- region -->

    <!-- Preference Titles -->
    <string name="general_settings_header">一般设置</string>
    <string name="path_header">查询图片的路径</string>
    <string name="permission_header">权限设置</string>
    <string name="about_header">关于</string>

    <!-- General Settings Preferences -->
    <string name="close_app_title">删除图片后是否关闭本应用</string>
    <string name="close_app_summary">如不关闭可以继续删除图片</string>
    <string name="delete_directly_title">直接删除</string>
    <string name="delete_directly_summary">是否允许轻触删除按钮直接删除（此选项不影响长按删除和多选删除）</string>
    <string name="number_of_pictures_title">单次查看数量</string>
    <string name="number_of_pictures_summary">单次搜索最近图片的数量</string>
    <string name="number_of_pictures_dialog_message">默认为10，不填写或填0都代表默认值</string>
    <string name="sort_order_title">排序方式</string>

    <!-- Path Preferences -->
    <string name="customize_path_title">自定义路径</string>
    <string name="customize_path_dialog_message">需要省略外置存储目录，如：Pictures/\n也可以搜索某一目录下以某字符串打头的图片，如：DCIM/sc\n支持多目录，不同路径之间使用“|”（竖线符号，Unicode编码U+007C）分割</string>
    <string name="path_title">选择路径</string>
    <string name="customize_path_description_title">自定义路径说明</string>
    <string name="customize_path_description_summary">点击查看</string>

    <!-- Permission Preferences -->
    <string name="all_files_permission_title">所有文件访问权限</string>
    <string name="all_files_permission_summary">仅Android 11及以上需要开启这个权限</string>

    <!-- About Preferences -->
    <string name="author_title">开发者</string>
    <string name="github_title">在Github上访问此仓库</string>
    <string name="github_url" translatable="false">https://github.com/1045290202/DeleteRecentPictures</string>
    <string name="user_agreement">用户协议</string>
    <string name="privacy_policy">隐私政策</string>

    <!-- endregion -->

    <string name="privacy_policy_content"><![CDATA[《删除最近图片》是一款专门用于查看和删除Android设备（以下简称为设备）内最近存储图片的应用程序，帮助用户方便地删除设备内不再需要的最近的图片文件。为了保障用户的图片数据安全，本应用不会接入互联网。本隐私政策属于本应用不可或缺的一部分。\n\n1.信息说明：\n本应用不接入互联网且不会收集任何用户的任何隐私信息。本应用不会破坏设备的数据安全，也不会主动删除或分享图片。\n\n2.权限说明：\n本应用仅使用读取外部存储、写入外部存储和管理外部存储的权限。如果应用没有获取到上述权限，将无法提供任何服务。\n\n3.隐私政策的变更：\n我们保留修改本政策的权利，如果我们需要调整此隐私政策，我们会跟随新版本《删除最近图片》应用发布新的隐私政策。\n\n4.开源说明：\n本应用已开源，如果您有需要，可以在 设置 -> 关于 -> 在github上访问此项目 找到本应用的源代码。]]></string>
    <string name="custom_path_explanation"><![CDATA[<p>自定义路径需要省略外置存储目录，无需填写完整路径，如：<strong>Pictures/</strong></p><p>同时兼容了SQL语句中的通配符：<br>&nbsp;&nbsp;&nbsp;&nbsp;<strong>_</strong>&nbsp;——&nbsp;仅替代一个字符；<br>&nbsp;&nbsp;&nbsp;&nbsp;<strong>%</strong>&nbsp;——&nbsp;替代一个或多个字符；<br>&nbsp;&nbsp;&nbsp;&nbsp;<strong>[charlist]</strong>&nbsp;——&nbsp;替代字符列中的任何单一字符；<br>&nbsp;&nbsp;&nbsp;&nbsp;<strong>[^charlist]</strong>或<strong>[!charlist]</strong>&nbsp;——&nbsp;替代不在字符列中的任何单一字符；<br>如果需要匹配_和%，可以在他们前面添加反斜杠（\\），如果需要匹配\\，则需要输入\\\\</p><a href=\"https://www.w3school.com.cn/sql/sql_wildcards.asp\">点此查看更详细的教程</a>]]></string>
    <string name="current_image_path">当前图片路径</string>
    <string name="image_path_is_empty">图片路径为空</string>
    <string name="backslash_n_x2" translatable="false">\n\n</string>
    <string name="delete_confirmation_prompt">即将删除%1$s张图片</string>
    <string name="delete_confirmation_prompt_single">请确认是否删除 %1$s</string>
    <string name="choose_your_action">请选择你的操作</string>
    <string name="failed_to_invoke_open_method">唤起打开方式失败</string>
    <string name="failed_to_invoke_sharing_method">唤起分享方式失败</string>
    <string name="barcode_or_qrcode_not_found">未发现条形码（二维码）</string>
    <string name="open_failed">打开失败</string>
    <string name="recognized_content">识别的内容</string>
    <string name="open_with_browser">用浏览器打开</string>
    <string name="open_method">打开方式</string>
    <string name="share">分享</string>
    <string name="barcode_or_qrcode_recognition">条形码（二维码）识别</string>
    <string name="not_getting_manage_external_storage_permission">未获取到所有文件访问权限</string>
    <string name="no_path">无路径</string>
    <string name="delete_the_latest_pictures_directly">直接删除最新图片</string>
    <string name="searching">查找中…</string>
    <string name="storage_permission_missing">未获取到存储权限</string>
    <string name="refresh_successful">刷新成功</string>
    <string name="refresh_successful_and_go_back">刷新成功并返回第一张图片</string>
    <string name="recycle_bin_created_successfully">创建回收站成功</string>
    <string name="recycle_bin_created_failed">创建回收站失败</string>
    <string name="successfully_deleted">“%1$s”已删除</string>
    <string name="picture_cannot_be_deleted">图片无法删除</string>
    <string name="revoke">撤销</string>
    <string name="all_deleted">已全部删除</string>
    <string name="partial_deletion_failed">部分删除失败</string>
    <string name="failed_to_delete_all">全部删除失败</string>
    <string name="delete_failed_because_no_information">没有获取到图片信息，删除失败</string>
    <string name="experimental_settings">实验性设置</string>
    <string name="undelete_summary">可以撤销误删除的一张图片。开启自动关闭的时候将无法撤销</string>
    <string name="undeleted_title">撤销删除</string>
    <string name="image_details">图片详情</string>
    <string name="image_path">路径</string>
    <string name="image_name">名称</string>
    <string name="image_size">大小</string>
    <string name="image_width">宽度</string>
    <string name="image_height">高度</string>
    <string name="image_mime_type">媒体类型</string>
    <string name="image_date_added">创建时间</string>
    <string name="image_date_modified">修改时间</string>
    <string name="format_colon">：</string>
    <string name="use_default_selection_because_error">无法获取外置存储位置, 替换为默认查询</string>
    <string name="all_selected_images_deselected">已取消所有已选择图片</string>
    <string name="settings_reloaded">已重新加载设置</string>
    <string name="no_more">没有更多了</string>
    <string name="enable_multi_window_layout_summary">可能会出现一些显示上的问题</string>
    <string name="enable_multi_window_layout_title">多窗口模式下使用专属的布局</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="permission_request_title">授权提示</string>
    <string name="permission_request_hint">本软件需要您授权文件与存储的权限，以读取和管理图片。</string>

</resources>
