<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        tools:context=".activity.main.MainActivity"
        tools:ignore="UseCompoundDrawables">
    
    <androidx.core.widget.NestedScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">
            
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                
                <Button
                        android:id="@+id/latestPicturePathButton"
                        style="@style/Theme.MaterialComponents.DayNight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="middle"
                        android:gravity="center"
                        android:padding="8dp"
                        android:stateListAnimator="@null"
                        android:textAllCaps="false"
                        android:textSize="14sp"
                        android:singleLine="true"
                        android:text="@string/searching" />
                
                <Button
                        android:id="@+id/refreshButton"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@string/refresh" />
            </LinearLayout>
            
            <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="280dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:orientation="horizontal">
        
        <Button
                android:id="@+id/settingsButton"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:text="@string/settings" />
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">
            
            <Button
                    android:id="@+id/cancelButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stateListAnimator="@null"
                    android:text="@string/cancel" />
            
            <Button
                    android:id="@+id/deleteButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stateListAnimator="@null"
                    android:text="@string/delete" />
        
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
